[docs_web_template/assets/first_scripts.js] Open sidebar by default ;[docs_web_template/assets/libscript_styles.css] Ensure first line doesn't get cut off

--- a/docs_web_template/assets/libscript_styles.css
+++ b/docs_web_template/assets/libscript_styles.css
@@ -27,6 +27,10 @@ html, body {
     max-width: 50%;
 }
 
+.tui-sidenav {
+    padding-top: 15px;
+}
+
 .tui-sidenav ul {
     margin-top: unset;
     border-top: 2px #000 solid;
